--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "app-script for development",
   "scripts": {
     "ui-dev": "vite",
-    "server-dev": "php artisan serve --host=0.0.0.0",
+    "server-dev": "php artisan serve --host=0.0.0.0 --port=8000",
     "start": "concurrently yarn:server-dev yarn:ui-dev",
     "print-schema": "php artisan lighthouse:print-schema --write --json",
     "mst-print-model": "mst-gql --format ts --outDir vitejs/src/models/stores storage/app/lighthouse-schema.json",
