--- a/tsconfig.extends.json
+++ b/tsconfig.extends.json
@@ -11,6 +11,7 @@
       "shared/*": ["src/shared/*"],
       "pages/*": ["src/pages/*"],
       "utils/*": ["src/utils/*"],
+      "services/*": ["src/services/*"],
       "root-model": ["src/models/stores/RootStore.base.ts"]
     }
   }
