--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,36 +15,36 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "ui",
+    "baseUrl": ".",
     "paths": {
-      "@colors": ["assets/theme/base/colors.ts"],
-      "@globals": ["assets/theme/base/globals.ts"],
-      "@typography": ["assets/theme/base/typography.ts"],
-      "@box-shadow": ["assets/theme/base/boxShadows.ts"],
-      "@borders": ["assets/theme/base/borders.ts"],
-      "@breakpoints": ["assets/theme/base/breakpoints.ts"],
-      "@theme-functions/*": ["assets/theme/functions/*"],
-      "@admin-routes": ["routes/admin.ts"],
-      "@student-routes": ["routes/user.ts"],
-      "@admin-pages/*": ["pages/admin/*"],
-      "@student-pages/*": ["pages/student/*"],
-      "@student-page": ["pages/student"],
-      "@root/*": ["./*"],
-      "@components/*": ["components/*"],
-      "@guest-page": ["pages/guest/index.ts"],
-      "@hooks/*": ["hooks/*"],
-      "@layout/*": ["layout/*"],
-      "@models/*": ["models/*"],
-      "@model": ["models"],
-      "@providers/*": ["providers/*"],
-      "@service-provider/*": ["providers/service-provider/*"],
-      "@shared/*": ["shared/*"],
-      "@pages/*": ["pages/*"],
-      "@utils/*": ["utils/*"],
+      "@colors": ["ui/assets/theme/base/colors.ts"],
+      "@globals": ["ui/assets/theme/base/globals.ts"],
+      "@typography": ["ui/assets/theme/base/typography.ts"],
+      "@box-shadow": ["ui/assets/theme/base/boxShadows.ts"],
+      "@borders": ["ui/assets/theme/base/borders.ts"],
+      "@breakpoints": ["ui/assets/theme/base/breakpoints.ts"],
+      "@theme-functions/*": ["ui/assets/theme/functions/*"],
+      "@admin-routes": ["ui/routes/admin.ts"],
+      "@student-routes": ["ui/routes/user.ts"],
+      "@admin-pages/*": ["ui/pages/admin/*"],
+      "@student-pages/*": ["ui/pages/student/*"],
+      "@student-page": ["ui/pages/student"],
+      "@root/*": ["ui/*"],
+      "@components/*": ["ui/components/*"],
+      "@guest-page": ["ui/pages/guest/index.ts"],
+      "@hooks/*": ["ui/hooks/*"],
+      "@layout/*": ["ui/layout/*"],
+      "@models/*": ["ui/models/*"],
+      "@model": ["ui/models"],
+      "@providers/*": ["ui/providers/*"],
+      "@service-provider/*": ["ui/providers/service-provider/*"],
+      "@shared/*": ["ui/shared/*"],
+      "@pages/*": ["ui/pages/*"],
+      "@utils/*": ["ui/utils/*"],
       "@services/*": ["services/*"],
-      "@root-model": ["models/RootStore.base.ts"]
+      "@root-model": ["ui/models/RootStore.base.ts"]
     }
   },
-  "include": ["src", "vite.config.ts", "cypress"],
+  "include": ["ui", "vite.config.ts", "cypress"],
   "exclude": ["node_modules", "src.old"]
 }
