add video & student in admin

--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 DEV_EMAIL="admin@app.com"
 STUDENT_EMAIL="student@app.com"
 VITE_PROD=false
+VITE_BACKEND="http://localhost:8000"
