--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "@mui/x-data-grid": "^5.0.1",
     "@stencil/core": "2.8.1",
     "@vime/core": "^5.0.34",
     "@vime/react": "^5.0.34",
